ImpressCMS ChangeLog

==================================
Unreleased : ImpressCMS 1.10 Alpha
==================================

- Added : IcmsLibrariesHandler - New feature allowing easy inclusion of third party libraries without hacking any core file (malanciault/davidl2)
- Added : Including Scriptaculous library

=============================================
Unreleased : ImpressCMS 1.0 "Janus" RC
=============================================

- Added : New feature "registration by invitation" (sudhacker)

- Fixed : #1890412: cache folder is not cleared after update. it now shouldn't remove any .htaccess or php.ini files (for php cgi users) either. (vaughan / skenow)
- Fixed : #1891588: Timezone offset empty (compatibility issue with versions of PHP aswell as operating system when using floats. (changed to an integer value instead). (vaughan / jegelstaff)
- Fixed : #1890400 Can't register new user. (seems to be a mysql version compatibility issue) (vaughan)
- Fixed : w3c validation (sato-san)
- Fixed : #1870346 System blocks not visible to added group (skenow/dave_l)
- Fixed : #1867922 No nice path from getNicePathFromId (MacDonald/malanciault)

========================================
2008-01-08 : ImpressCMS 1.0 "Janus" Beta
========================================

- Added : linkexternal.js to header, allows devs & designers to utilise 'rel="external" or rel="nofollow" in <A > tags as a replacement for target="_blank". (Vaughan)
- Added : New admin interface based on XOOPS EXM and improved. Thanks to XOOPS EXM!. (BitC3R0 / malanciault / young-pee)
- Added : Addition of the XoopsEditors framework with default editor (malanciault)
- Added : Integration of the Easiest Multilanguage originally created by GIJOE (malanciault)
- Added : Addition of Gijoe Remember me hack (malanciault)
- Added : Added a new Database Driver (MySQLi). (young-pee)
- Added : New feature to add/edit/delete blocks positions. (rplima/young-pee)
- Added : New installer (skalpa/wtravel)