@@ -8,6 +8,15 @@ Legend :
   +- a constant was modified
   -  a constant was remove OR a whole file was removed
 
+ImpressCMS 1.1 (changes from ImpressCMS 1.0)
+=========================================
+
+modules/system/language/english/admin/preferences.php
+--------------------------
+
+define("_MD_AM_ML_AUTOSELECT_ENABLED","Language Autoselection");
+define("_MD_AM_ML_AUTOSELECT_ENABLED_DESC","Make the system autoselect the language of the site depending the web browser language configuration.");
+
 ImpressCMS 0.5 (changes from XOOPS 2.0.17)
 =========================================
 
